{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 67,
  "lineage": "f4986dd1-b303-dcc5-a48f-78a052ffd6bb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "test-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:373993042843:loadbalancer/test-elb",
            "availability_zones": [
              "eu-west-1a",
              "eu-west-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "test-elb-2113665495.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "test-elb",
            "idle_timeout": 100,
            "instances": [
              "i-04b7104072a3aaab1",
              "i-07c801972541926f0"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "https",
                "lb_port": 443,
                "lb_protocol": "https"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "test-elb",
            "security_groups": [
              "sg-07472bfd597bac86a"
            ],
            "source_security_group": "373993042843/access_test",
            "source_security_group_id": "sg-07472bfd597bac86a",
            "subnets": [
              "subnet-07aa8e1efba2b588e",
              "subnet-08ffb2b674a9880a5"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "tags_all": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_instance.webservers",
            "aws_security_group.webservers",
            "aws_subnet.test_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f89681a05a3a9de7",
            "arn": "arn:aws:ec2:eu-west-1:373993042843:instance/i-07c801972541926f0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c801972541926f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08197fc1e2811889a",
            "private_dns": "ip-10-20-1-30.eu-west-1.compute.internal",
            "private_ip": "10.20.1.30",
            "public_ip": "54.155.134.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d124c0bfeabd43a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07472bfd597bac86a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ffb2b674a9880a5",
            "tags": {
              "Name": "Server-0"
            },
            "tags_all": {
              "Name": "Server-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07472bfd597bac86a"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.test_public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f89681a05a3a9de7",
            "arn": "arn:aws:ec2:eu-west-1:373993042843:instance/i-04b7104072a3aaab1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b7104072a3aaab1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ecf1d78a8883d795",
            "private_dns": "ip-10-20-2-65.eu-west-1.compute.internal",
            "private_ip": "10.20.2.65",
            "public_ip": "54.247.55.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f85d7328690e1d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07472bfd597bac86a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07aa8e1efba2b588e",
            "tags": {
              "Name": "Server-1"
            },
            "tags_all": {
              "Name": "Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07472bfd597bac86a"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.test_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:373993042843:internet-gateway/igw-0a27cfa86a0ec0049",
            "id": "igw-0a27cfa86a0ec0049",
            "owner_id": "373993042843",
            "vpc_id": "vpc-02a69f7b6c11d4770"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ig_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:373993042843:route-table/rtb-06586ccfb85faeef7",
            "id": "rtb-06586ccfb85faeef7",
            "owner_id": "373993042843",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a27cfa86a0ec0049",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-02a69f7b6c11d4770"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:373993042843:route-table/rtb-01d5e504bf022c329",
            "id": "rtb-01d5e504bf022c329",
            "owner_id": "373993042843",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a27cfa86a0ec0049",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "tags_all": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-02a69f7b6c11d4770"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0022211ae81ecea71",
            "route_table_id": "rtb-01d5e504bf022c329",
            "subnet_id": "subnet-08ffb2b674a9880a5"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.test_public",
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d260b7619c2d352",
            "route_table_id": "rtb-01d5e504bf022c329",
            "subnet_id": "subnet-07aa8e1efba2b588e"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.test_public",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0022211ae81ecea71",
            "route_table_id": "rtb-01d5e504bf022c329",
            "subnet_id": "subnet-08ffb2b674a9880a5"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.test_public",
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d260b7619c2d352",
            "route_table_id": "rtb-01d5e504bf022c329",
            "subnet_id": "subnet-07aa8e1efba2b588e"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.test_public",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:373993042843:security-group/sg-07472bfd597bac86a",
            "description": "Which https inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-07472bfd597bac86a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "access_test",
            "name_prefix": "",
            "owner_id": "373993042843",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02a69f7b6c11d4770"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:373993042843:subnet/subnet-08ffb2b674a9880a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-08ffb2b674a9880a5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373993042843",
            "tags": {
              "Name": "Subnet-1"
            },
            "tags_all": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-02a69f7b6c11d4770"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:373993042843:subnet/subnet-07aa8e1efba2b588e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-07aa8e1efba2b588e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373993042843",
            "tags": {
              "Name": "Subnet-2"
            },
            "tags_all": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-02a69f7b6c11d4770"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:373993042843:vpc/vpc-02a69f7b6c11d4770",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0eaa32f54b671b33f",
            "default_route_table_id": "rtb-0dfd215a5d3174158",
            "default_security_group_id": "sg-08476cb936cd02bc5",
            "dhcp_options_id": "dopt-b8cf60dc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02a69f7b6c11d4770",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dfd215a5d3174158",
            "owner_id": "373993042843",
            "tags": {
              "Name": "TestVPC"
            },
            "tags_all": {
              "Name": "TestVPC"
            }
          }
        }
      ]
    }
  ]
}